export const snapshot = {};

snapshot[`relative_url plugin 1`] = `4`;

snapshot[`relative_url plugin 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: "html",
    },
    {
      engine: true,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: "html",
    },
    {
      engine: false,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".json",
      loader: [AsyncFunction: json],
    },
    {
      engine: true,
      key: ".md",
      loader: [AsyncFunction: text],
      page: "html",
    },
    {
      component: true,
      data: true,
      engine: true,
      key: ".js",
      loader: [AsyncFunction: module],
    },
    {
      component: true,
      data: true,
      engine: true,
      key: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: "html",
    },
    {
      data: true,
      engine: false,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: "html",
    },
  ],
}
`;

snapshot[`relative_url plugin 3`] = `
[
]
`;

snapshot[`relative_url plugin 4`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body><p>Contact</p>
<ul>
<li><a href="../..">Index</a></li>
<li><a href="..">About us</a></li>
<li><a href="">Contact</a></li>
<li><a href="../presentation">Presentation</a></li>
</ul>
</body></html>',
  data: {
    content: "Contact

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/contact/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/contact/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/contact",
  },
}
`;

snapshot[`relative_url plugin 5`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body><p>About us</p>
<ul>
<li><a href="..">Index</a></li>
<li><a href="">About us</a></li>
<li><a href="contact">Contact</a></li>
<li><a href="presentation">Presentation</a></li>
</ul>
</body></html>',
  data: {
    content: "About us

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/index",
  },
}
`;

snapshot[`relative_url plugin 6`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body><p>Presentation</p>
<ul>
<li><a href="../..">Index</a></li>
<li><a href="..">About us</a></li>
<li><a href="../contact">Contact</a></li>
<li><a href="">Presentation</a></li>
</ul>
</body></html>',
  data: {
    content: "Presentation

- [Index](/)
- [About us](/about-us)
- [Contact](/about-us/contact)
- [Presentation](/about-us/presentation)
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/presentation/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/presentation/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/presentation",
  },
}
`;

snapshot[`relative_url plugin 7`] = `
{
  content: '<!DOCTYPE html>
<html><head></head><body><p>Index</p>
<ul>
<li><a href="">Index</a></li>
<li><a href="about-us">About us</a></li>
<li><a href="./about-us/contact">Contact</a></li>
<li><a href="about-us/presentation">Presentation</a></li>
<li><a href="?ignored=true">Ignored</a></li>
<li><a href="#ignored">Ignored</a></li>
<li><a href="https://ignored.com">Ignored</a></li>
<li><a href="//ignored.com">Ignored</a></li>
</ul>
</body></html>',
  data: {
    content: "Index

- [Index](/)
- [About us](about-us)
- [Contact](./about-us/contact)
- [Presentation](about-us/presentation)
- [Ignored](?ignored=true)
- [Ignored](#ignored)
- [Ignored](https://ignored.com)
- [Ignored](//ignored.com)
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".md",
    path: "/index",
  },
}
`;
